--- a/config/machines/lumi/regrid.yaml
+++ b/config/machines/lumi/regrid.yaml
@@ -66,6 +66,8 @@ source_grids:
         space_coord: ["lon", "lat"]
       monthly-1deg-3d:
         space_coord: ["lon", "lat"]
+      lra-r100-monthly:
+        space_coord: ["lon", "lat"]
     fdb-historical-1990:
       default:
         space_coord: ["ncells"]
