--- a/config/machines/mafalda/catalog/IFS/fdb-tco399.yaml
+++ b/config/machines/mafalda/catalog/IFS/fdb-tco399.yaml
@@ -9,10 +9,10 @@ sources:
         stream: lwda
         anoffset: 9
         date: 20200120
-        time: 0000
+        time: "0000"
         param: tcc
         levtype: sfc
-        step: 0/to/35064
+        step: 0
       data_start_date: 20200120
       data_end_date: 20210101
       aggregation: S
