--- a/config/fixes/IFS.yaml
+++ b/config/fixes/IFS.yaml
@@ -489,8 +489,8 @@ models:
                         source: 182
                         grib: true
                         decumulate: true
-                        src_units: m
-                        units: kg m**-2 s**-1
+                        #src_units: m
+                        units: kg m**-2 s**-1 #forced to be equal to tprate
                     mtsfr:
                         source: sf
                         grib: true
