--- a/config/machines/lumi/catalog/IFS/fdb-historical-1990.yaml
+++ b/config/machines/lumi/catalog/IFS/fdb-historical-1990.yaml
@@ -54,7 +54,7 @@ sources:
         param: 129 # geopotential
         levtype: pl
         levelist: [1,5,10,20,30,50,70,100,150,200,250,300,400,500,600,700,850,925,1000]
-        step: 6
+        step: 6  # First available step
       data_start_date: 19900101
       data_end_date: 20200101
       aggregation: 6H  # Default aggregation if timestep=S is used
@@ -75,7 +75,7 @@ sources:
         time: "0000"
         param: sd
         levtype: sfc
-        step: 744
+        step: 0
       data_start_date: 19900101
       data_end_date: 20200101
       aggregation: M  # Default aggregation if timestep=S is used
@@ -98,7 +98,7 @@ sources:
         param: t
         levtype: pl
         levelist: [1,5,10,20,30,50,70,100,150,200,250,300,400,500,600,700,850,925,1000]
-        step: 744
+        step: 0
       data_start_date: 19900101
       data_end_date: 20200101
       aggregation: M  # Default aggregation if timestep=S is used
