printing exit statusprinting exit status

--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -108,7 +108,7 @@ jobs:
         #       by running with coverage in only one matrix job run.
         run: |
           # Produce the HTML report. Defaults to writing in htmlcov/index.html.
-          pytest --cov=aqua --cov-report=html --cov-report=xml --cov-branch -m "aqua or slow or gsv"
+          pytest --cov=aqua --cov-report=html --cov-report=xml --cov-branch -m "aqua or slow or gsv" || echo "Pytest exited with status $?"
           
           if [[ ${COVERAGE_ENABLED} ]]; then
             # Extract the top header of the pytest HTML report.
