--- a/config/machines/lumi/catalog/IFS/control-1950-devcon.yaml
+++ b/config/machines/lumi/catalog/IFS/control-1950-devcon.yaml
@@ -17,7 +17,7 @@ sources:
       aggregation: H  # Default aggregation if timestep=S is used
       timestep: H
       timestyle: step
-    description: FDB IFS/NEMO control run hourly data native
+    description: FDB IFS/NEMO control run hourly data native. Contains tprate(260048), 2t(167), 10u(165), 10v(166), 100u(228246), 100v(228247), sr(173), blh(159), sd(141), 2d(168), skt(235), chnk(148). See fix yaml for derived vars.
     driver: gsv
     metadata: {fdb_path: 
         /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-CONTROL_1950_DEVCON.yaml}
@@ -39,7 +39,7 @@ sources:
       aggregation: H  # Default aggregation if timestep=S is used
       timestep: H
       timestyle: step
-    description: FDB IFS/NEMO control run hourly data 1deg
+    description: FDB IFS/NEMO control run hourly data 1deg. Contains tprate(260048), sf(144), 2t(167), 10u(165), 10v(166), blh(159), sshf(146), slhf(147), ssrd(169), ssr(176), strd(175), str(177), ttr(179), e(182), tsr(178), ewss(180), nsss(181), chnk(148). See fix yaml for derived vars.
     driver: gsv
     metadata: {fdb_path: 
         /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-CONTROL_1950_DEVCON.yaml}
@@ -63,7 +63,7 @@ sources:
       aggregation: 6H  # Default aggregation if timestep=S is used
       timestep: H  # What one step means
       timestyle: step
-    description: FDB IFS/NEMO control run 6hourly data 1deg
+    description: FDB IFS/NEMO control run 6hourly data 1deg. Contains z(129).
     driver: gsv
     metadata: {fdb_path: 
         /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-CONTROL_1950_DEVCON.yaml}
@@ -86,7 +86,7 @@ sources:
       timestep: H
       timestyle: step
       timeshift: -M    # shift time of resulting xarray by this amount
-    description: FDB IFS/NEMO control run monthly data 1deg
+    description: FDB IFS/NEMO control run monthly data 1deg. FDB IFS/NEMO historical run monthly data 1deg. Contains tprate(260048), 2t(167), tcc(164), sd(141), tciw(79), tclw(78), msl(151), tcwv(137), lcc(186), mcc(187), hcc(188).
     driver: gsv
     metadata: {fdb_path: 
         /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-CONTROL_1950_DEVCON.yaml}
@@ -111,7 +111,7 @@ sources:
       timestep: H
       timestyle: step
       timeshift: -M    # shift time of resulting xarray by this amount
-    description: FDB IFS/NEMO control run monthly data 1deg
+    description: FDB IFS/NEMO control run monthly data 1deg. Contains u(131), v(132), t(130), r(157), w(135), q(133).
     driver: gsv
     metadata: {fdb_path: 
         /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-CONTROL_1950_DEVCON.yaml}
