test catch exit status=1

--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -103,10 +103,13 @@ jobs:
           grib_dump test.grib
       - name: Run tests
         # https://github.com/mamba-org/setup-micromamba#about-login-shells
-        shell: micromamba-shell {0}
+        #shell: micromamba-shell {0}
+        shell: bash {0}
         # NOTE: We could gain a few seconds in the build, if needed,
         #       by running with coverage in only one matrix job run.
         run: |
+          set -eo pipefail
+          micromamba activate aqua_common
           # Produce the HTML report. Defaults to writing in htmlcov/index.html.
           pytest --cov=aqua --cov-report=html --cov-report=xml --cov-branch -m "aqua or slow or gsv" || echo "Pytest exited with status $?"
           
