mswep and central archive for grids/weights/areas

--- a/config/machines/lumi/catalog.yaml
+++ b/config/machines/lumi/catalog.yaml
@@ -19,3 +19,8 @@ sources:
     driver: yaml_file_cat
     args:
         path: "{{CATALOG_DIR}}/catalog/NEMO/main.yaml"
+  MSWEP:
+    description: MSWEP_V280 precipitation data
+    driver: yaml_file_cat
+    args:
+        path: "{{CATALOG_DIR}}/catalog/MSWEP/main.yaml"
