--- a/config/machines/lumi/regrid.yaml
+++ b/config/machines/lumi/regrid.yaml
@@ -1,15 +1,15 @@
 weights:
-   path: /work/users/jost/aqua/weights
+   path: /pfs/lustrep3/projappl/project_465000454/data/AQUA/grids/weights
    template: weights_{model}_{exp}_{source}_{method}_{target}_l{level}.nc
 
 areas:
-   path: /work/users/jost/aqua/areas
+   path:/pfs/lustrep3/projappl/project_465000454/data/AQUA/areas
    src_template: cell_area_{model}_{exp}_{source}.nc
    dst_template: cell_area_{grid}.nc
 
 cdo-paths:
-  download: /work/users/jost/aqua/weights
-  icon: /pool/data/ICON
+  download: /pfs/lustrep3/projappl/project_465000454/data/AQUA/grids/weigths
+  icon: /pool/data/ICON #wring
 
 target_grids:
   r005: r7200x3600
@@ -35,14 +35,14 @@ source_grids:
   IFS:
     tco399-orca025:
       default:
-        path: /pfs/lustrep3/projappl/project_465000454/padavini/aqua/grids/tco399_grid.nc
+        path: /pfs/lustrep3/projappl/project_465000454/data/AQUA/grids/tco399_grid.nc
         space_coord: ["value"]
     tco79-eORCA1:
       atm2d:
-        path: /pfs/lustrep3/scratch/project_465000454/AQUA-workflow/tco_grids/tco79_grid.nc
+        path: /pfs/lustrep3/projappl/project_465000454/data/AQUA/grids/tco79_grid.nc
         space_coord: ["value"]
       atm3d:
-        path: /pfs/lustrep3/scratch/project_465000454/AQUA-workflow/tco_grids/tco79_grid.nc
+        path: /pfs/lustrep3/projappl/project_465000454/data/AQUA/grids/tco79_grid.nc
         space_coord: ["value"]
     test-tco79:
       original_2d:
@@ -51,8 +51,8 @@ source_grids:
     fdb-tco399:
       default:
         path: 
-          2d: /work/users/jost/aqua/grids/tco399_grid.nc
-          2dm: /work/users/jost/aqua/grids/tco399_grid_masked.nc
+          2d: /pfs/lustrep3/projappl/project_465000454/data/AQUA/grids/tco399_grid.nc
+          2dm: /pfs/lustrep3/projappl/project_465000454/data/AQUA/grids/tco399_grid_masked.nc #missing
         masked_vars:
           - ci
           - sst
@@ -67,9 +67,15 @@ source_grids:
   NEMO:
     tco79-eORCA1:
       default:
-        path: /pfs/lustrep3/projappl/project_465000454/padavini/aqua/grids/ORCA1_mesh_sfc_grid_T.nc
+        path: /pfs/lustrep3/projappl/project_465000454/data/AQUA/grids/ORCA1_mesh_sfc_grid_T.nc
         space_coord: ["cell"]
         # path: /pfs/lustrep3/scratch/project_465000454/pool/data/IFS/inputs_de_48r1/nemo/V40/eORCA1_Z75/common/mesh_mask.nc
         # extra:
         #   - selname,tmask          
         # space_coord: ["nav_lon", "nav_lat"]
+  MSWEP:
+    past:
+      default:
+        space_coord:
+        - lon
+        - lat
