--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -45,7 +45,7 @@ jobs:
         #       command. The default value in GitHub is ``--noprofile --norc -eo pipefail``.
         #       https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsshell
         #       We removed the noprofile and norc so we have pytest set by Conda in our PATH.
-        shell: bash -eo --login pipefail {0}
+        shell: bash --login -eo pipefail {0}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
