include time in startdate and enddate

--- a/config/machines/lumi/catalog/IFS/control-1950-devcon.yaml
+++ b/config/machines/lumi/catalog/IFS/control-1950-devcon.yaml
@@ -12,8 +12,8 @@ sources:
         param: 167
         levtype: sfc
         step: 0
-      data_start_date: 19500101
-      data_end_date: 19600101
+      data_start_date: "19500101:0000"
+      data_end_date: "19591231:2300"
       aggregation: H  # Default aggregation if timestep=S is used
       timestep: H
       timestyle: step
@@ -34,8 +34,8 @@ sources:
         param: 144
         levtype: sfc
         step: 0
-      data_start_date: 19500101
-      data_end_date: 19600101
+      data_start_date: "19500101:0000"
+      data_end_date: "19591231:2300"
       aggregation: H  # Default aggregation if timestep=S is used
       timestep: H
       timestyle: step
@@ -58,8 +58,8 @@ sources:
         levelist: [1, 5, 10, 20, 30, 50, 70, 100, 150, 200, 250, 300, 400, 500, 600,
           700, 850, 925, 1000]
         step: 6  # First available step
-      data_start_date: 19500101
-      data_end_date: 19600101
+      data_start_date: "19500101:0000"
+      data_end_date: "19591231:1800"
       aggregation: 6H  # Default aggregation if timestep=S is used
       timestep: H  # What one step means
       timestyle: step
@@ -80,8 +80,8 @@ sources:
         param: sd
         levtype: sfc
         step: 0
-      data_start_date: 19500101
-      data_end_date: 19600101
+      data_start_date: "19500101"
+      data_end_date: "19591201"
       aggregation: M  # Default aggregation if timestep=S is used
       timestep: H
       timestyle: step
@@ -105,8 +105,8 @@ sources:
         levelist: [1, 5, 10, 20, 30, 50, 70, 100, 150, 200, 250, 300, 400, 500, 600,
           700, 850, 925, 1000]
         step: 0
-      data_start_date: 19500101
-      data_end_date: 19600101
+      data_start_date: "19500101"
+      data_end_date: "19591201"
       aggregation: M  # Default aggregation if timestep=S is used
       timestep: H
       timestyle: step
