--- a/config/machines/lumi/catalog/IFS/historical-1990-devcon.yaml
+++ b/config/machines/lumi/catalog/IFS/historical-1990-devcon.yaml
@@ -12,8 +12,8 @@ sources:
         param: 167
         levtype: sfc
         step: 0
-      data_start_date: 19900101
-      data_end_date: 20200101
+      data_start_date: "19900101:0000"
+      data_end_date: "19901231:2300"
       aggregation: H  # Default aggregation if timestep=S is used
       timestep: H
       timestyle: step
@@ -33,8 +33,8 @@ sources:
         param: 144
         levtype: sfc
         step: 0
-      data_start_date: 19900101
-      data_end_date: 20200101
+      data_start_date: "19900101:0000"
+      data_end_date: "19901231:2300"
       aggregation: H  # Default aggregation if timestep=S is used
       timestep: H
       timestyle: step
@@ -55,8 +55,8 @@ sources:
         levtype: pl
         levelist: [1,5,10,20,30,50,70,100,150,200,250,300,400,500,600,700,850,925,1000]
         step: 6  # First available step
-      data_start_date: 19900101
-      data_end_date: 20200101
+      data_start_date: "19500101:0000"
+      data_end_date: "19591231:1800"
       aggregation: 6H  # Default aggregation if timestep=S is used
       timestep: H  # What one step means
       timestyle: step
@@ -76,8 +76,8 @@ sources:
         param: sd
         levtype: sfc
         step: 0
-      data_start_date: 19900101
-      data_end_date: 20200101
+      data_start_date: "19900101"
+      data_end_date: "19901201"
       aggregation: M  # Default aggregation if timestep=S is used
       timestep: H
       timestyle: step
@@ -99,8 +99,8 @@ sources:
         levtype: pl
         levelist: [1,5,10,20,30,50,70,100,150,200,250,300,400,500,600,700,850,925,1000]
         step: 0
-      data_start_date: 19900101
-      data_end_date: 20200101
+      data_start_date: "19900101"
+      data_end_date: "19901201"
       aggregation: M  # Default aggregation if timestep=S is used
       timestep: H
       timestyle: step
