--- a/config/machines/ci/catalog/IFS/test-fdb.yaml
+++ b/config/machines/ci/catalog/IFS/test-fdb.yaml
@@ -11,11 +11,11 @@ sources:
         levtype: pl
         levelist: [1000]
         date: "20080101"
-        time: "1200"
+        time: "0000"
         step: 0
-      data_start_date: 20080101
-      data_end_date: 20080101
-      aggregation: S
+      data_start_date: "20080101:1200"
+      data_end_date: "20080101:1200"
+      aggregation: H
       timestep: H
       timestyle: date
     description: test FDB archive
