--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -98,6 +98,12 @@ jobs:
           # When it fails, the test.grib file will have 0 (zero) messages.
           fdb-read sample_test_data_fdb_request test.grib
           grib_dump test.grib
+      - name: Debug Shell Environment
+        run: |
+          echo "PATH: $PATH"
+          echo "SHELL: $SHELL"
+          echo "Environment:"
+          env
       - name: Run tests
         # https://github.com/mamba-org/setup-micromamba#about-login-shells
         # NOTE: We could gain a few seconds in the build, if needed,
