--- a/config/machines/lumi/catalog.yaml
+++ b/config/machines/lumi/catalog.yaml
@@ -24,3 +24,8 @@ sources:
     driver: yaml_file_cat
     args:
         path: "{{CATALOG_DIR}}/catalog/MSWEP/main.yaml"
+  CERES:
+    description: CERES-EBAF radiation data
+    driver: yaml_file_cat
+    args:
+      path: "{{CATALOG_DIR}}/catalog/CERES/main.yaml"
