--- a/config/machines/lumi/catalog/IFS/control-1950-devcon.yaml
+++ b/config/machines/lumi/catalog/IFS/control-1950-devcon.yaml
@@ -12,12 +12,14 @@ sources:
         param: 167
         levtype: sfc
         step: 0
-      data_start_date: "19500101:0000"
-      data_end_date: "19591231:2300"
+      data_start_date: 19500101:0000
+      data_end_date: 19591231:2300
       aggregation: H  # Default aggregation if timestep=S is used
       timestep: H
       timestyle: step
-    description: hourly data on native grid TCo2560 (about 4.5km). Contains tprate(260048), 2t(167), 10u(165), 10v(166), 100u(228246), 100v(228247), sr(173), blh(159), sd(141), 2d(168), skt(235), chnk(148). See fix yaml for derived vars.
+    description: hourly data on native grid TCo2560 (about 4.5km). Contains tprate(260048),
+      2t(167), 10u(165), 10v(166), 100u(228246), 100v(228247), sr(173), blh(159),
+      sd(141), 2d(168), skt(235), chnk(148). See fix yaml for derived vars.
     driver: gsv
     metadata: {fdb_path: 
         /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-CONTROL_1950_DEVCON.yaml}
@@ -34,12 +36,15 @@ sources:
         param: 144
         levtype: sfc
         step: 0
-      data_start_date: "19500101:0000"
-      data_end_date: "19591231:2300"
+      data_start_date: 19500101:0000
+      data_end_date: 19591231:2300
       aggregation: H  # Default aggregation if timestep=S is used
       timestep: H
       timestyle: step
-    description: hourly data on r100 grid. Contains tprate(260048), sf(144), 2t(167), 10u(165), 10v(166), blh(159), sshf(146), slhf(147), ssrd(169), ssr(176), strd(175), str(177), ttr(179), e(182), tsr(178), ewss(180), nsss(181), chnk(148). See fix yaml for derived vars.
+    description: hourly data on r100 grid. Contains tprate(260048), sf(144), 2t(167),
+      10u(165), 10v(166), blh(159), sshf(146), slhf(147), ssrd(169), ssr(176), strd(175),
+      str(177), ttr(179), e(182), tsr(178), ewss(180), nsss(181), chnk(148). See fix
+      yaml for derived vars.
     driver: gsv
     metadata: {fdb_path: 
         /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-CONTROL_1950_DEVCON.yaml}
@@ -58,8 +63,8 @@ sources:
         levelist: [1, 5, 10, 20, 30, 50, 70, 100, 150, 200, 250, 300, 400, 500, 600,
           700, 850, 925, 1000]
         step: 6  # First available step
-      data_start_date: "19500101:0000"
-      data_end_date: "19591231:1800"
+      data_start_date: 19500101:0000
+      data_end_date: 19591231:1800
       aggregation: 6H  # Default aggregation if timestep=S is used
       timestep: H  # What one step means
       timestyle: step
@@ -80,13 +85,14 @@ sources:
         param: sd
         levtype: sfc
         step: 0
-      data_start_date: "19500101"
-      data_end_date: "19591201"
+      data_start_date: '19500101'
+      data_end_date: '19591201'
       aggregation: M  # Default aggregation if timestep=S is used
       timestep: H
       timestyle: step
       timeshift: -M    # shift time of resulting xarray by this amount
-    description: monthly data on r100 grid. Contains tprate(260048), 2t(167), tcc(164), sd(141), tciw(79), tclw(78), msl(151), tcwv(137), lcc(186), mcc(187), hcc(188).
+    description: monthly data on r100 grid. Contains tprate(260048), 2t(167), tcc(164),
+      sd(141), tciw(79), tclw(78), msl(151), tcwv(137), lcc(186), mcc(187), hcc(188).
     driver: gsv
     metadata: {fdb_path: 
         /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-CONTROL_1950_DEVCON.yaml}
@@ -105,22 +111,23 @@ sources:
         levelist: [1, 5, 10, 20, 30, 50, 70, 100, 150, 200, 250, 300, 400, 500, 600,
           700, 850, 925, 1000]
         step: 0
-      data_start_date: "19500101"
-      data_end_date: "19591201"
+      data_start_date: '19500101'
+      data_end_date: '19591201'
       aggregation: M  # Default aggregation if timestep=S is used
       timestep: H
       timestyle: step
       timeshift: -M    # shift time of resulting xarray by this amount
-    description: monthly data on r100 grid. Contains u(131), v(132), t(130), r(157), w(135), q(133).
+    description: monthly data on r100 grid. Contains u(131), v(132), t(130), r(157),
+      w(135), q(133).
     driver: gsv
     metadata: {fdb_path: 
         /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-CONTROL_1950_DEVCON.yaml}
   lra-r100-monthly:
     driver: netcdf
-    description: LRA monthly data on r100 grid
+    description: LRA data monthly at r100
     args:
       urlpath: 
-        /pfs/lustrep3/projappl/project_465000454/padavini/LRA/IFS/fdb-control-1950/r100/monthly/*fdb-control-1950_r100_monthly_????.nc
+        /pfs/lustrep3/projappl/project_465000454/padavini/LRA-control/IFS/control-1950-devcon/r100/monthly/*control-1950-devcon_r100_monthly_????.nc
       chunks: {}
       xarray_kwargs:
         decode_times: true
