update the LRA for devcon

--- a/config/machines/levante/catalog/IFS/main.yaml
+++ b/config/machines/levante/catalog/IFS/main.yaml
@@ -24,3 +24,13 @@ sources:
     driver: yaml_file_cat
     args:
         path: "{{CATALOG_DIR}}/tco1279-orca025-cycle3.yaml"
+  control-1950-devcon:
+    description: DE340 development control run with fixed GHG from 1950
+    driver: yaml_file_cat
+    args:
+        path: "{{CATALOG_DIR}}/control-1950-devcon.yaml"
+  historical-1990-devcon:
+    description: DE340 development control run with fixed GHG from 1950
+    driver: yaml_file_cat
+    args:
+        path: "{{CATALOG_DIR}}/historical-1990-devcon.yaml"
