introduce DATA_PATH and centralize era5

--- a/config/machines/lumi/catalog.yaml
+++ b/config/machines/lumi/catalog.yaml
@@ -1,3 +1,10 @@
+metadata:
+  parameters:
+    DATA_PATH:
+      type: str
+      description: the path to observational datasets
+      default: /pfs/lustrep3/projappl/project_465000454/data/AQUA/datasets
+  
 sources:
   FESOM:
     description: FESOM ocean model
