--- a/config/machines/lumi/catalog/ERA5/era5.yaml
+++ b/config/machines/lumi/catalog/ERA5/era5.yaml
@@ -7,7 +7,7 @@ sources:
     description: ERA5 monthly data from 1940 to 2022
     driver: netcdf
     args:
-      urlpath: '/pfs/lustrep3/projappl/project_465000454/padavini/ERA5/mon/ERA5_*_mon_full**.nc'
+      urlpath: '{{DATA_PATH}}/ERA5/mon/ERA5_*_mon_full**.nc'
       chunks: 
         time: 12
       xarray_kwargs:
