data path for ceres and mswep

--- a/config/machines/lumi/catalog/CERES/ebaf-toa42.yaml
+++ b/config/machines/lumi/catalog/CERES/ebaf-toa42.yaml
@@ -7,7 +7,7 @@ sources:
     description: CERES EBAF TOA Ed4.2 from 2000 to 2023
     driver: netcdf
     args:
-      urlpath: '/pfs/lustrep3/projappl/project_465000454/data/AQUA/datasets/CERES/EBAF_v4.2/CERES_EBAF-TOA_Edition4.2_MONTHLY_200003-202301.nc'
+      urlpath: '{{DATA_PATH}}/CERES/EBAF_v4.2/CERES_EBAF-TOA_Edition4.2_MONTHLY_200003-202301.nc'
       chunks: {}
       xarray_kwargs:
         decode_times: True
