--- a/config/machines/lumi/catalog/CERES/syn-toa41.yaml
+++ b/config/machines/lumi/catalog/CERES/syn-toa41.yaml
@@ -8,10 +8,10 @@ sources:
     driver: netcdf
     args:
       urlpath: 
-        - '/pfs/lustrep3/projappl/project_465000454/data/AQUA/datasets/CERES/SYNOP_v4.1/CERES_SYN1deg-Day_Terra-Aqua-MODIS_Ed4.1_Subset_20010101-20070909.nc'
-        - '/pfs/lustrep3/projappl/project_465000454/data/AQUA/datasets/CERES/SYNOP_v4.1/CERES_SYN1deg-Day_Terra-Aqua-MODIS_Ed4.1_Subset_20070910-20140518.nc'
-        - '/pfs/lustrep3/projappl/project_465000454/data/AQUA/datasets/CERES/SYNOP_v4.1/CERES_SYN1deg-Day_Terra-Aqua-MODIS_Ed4.1_Subset_20140519-20210124.nc'
-        - '/pfs/lustrep3/projappl/project_465000454/data/AQUA/datasets/CERES/SYNOP_v4.1/CERES_SYN1deg-Day_Terra-Aqua-MODIS_Ed4.1_Subset_20210125-20211231.nc'
+        - '{{DATA_PATH}}/CERES/SYNOP_v4.1/CERES_SYN1deg-Day_Terra-Aqua-MODIS_Ed4.1_Subset_20010101-20070909.nc'
+        - '{{DATA_PATH}}/CERES/SYNOP_v4.1/CERES_SYN1deg-Day_Terra-Aqua-MODIS_Ed4.1_Subset_20070910-20140518.nc'
+        - '{{DATA_PATH}}/CERES/SYNOP_v4.1/CERES_SYN1deg-Day_Terra-Aqua-MODIS_Ed4.1_Subset_20140519-20210124.nc'
+        - '{{DATA_PATH}}/CERES/SYNOP_v4.1/CERES_SYN1deg-Day_Terra-Aqua-MODIS_Ed4.1_Subset_20210125-20211231.nc'
       chunks: {}
       xarray_kwargs:
         decode_times: True
