--- a/config/machines/lumi/catalog/CERES/ebaf-sfc42.yaml
+++ b/config/machines/lumi/catalog/CERES/ebaf-sfc42.yaml
@@ -7,7 +7,7 @@ sources:
     description: CERES EBAF SFC Ed4.2 from 2000 to 2022
     driver: netcdf
     args:
-      urlpath: '/pfs/lustrep3/projappl/project_465000454/data/AQUA/datasets/CERES/EBAF_v4.2/CERES_EBAF_Edition4.2_MONTHLY_200003-202203.nc'
+      urlpath: '{{DATA_PATH}}/CERES/EBAF_v4.2/CERES_EBAF_Edition4.2_MONTHLY_200003-202203.nc'
       chunks: {}
       xarray_kwargs:
         decode_times: True
