--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -107,7 +107,7 @@ jobs:
         # https://github.com/mamba-org/setup-micromamba#about-login-shells
         # NOTE: We could gain a few seconds in the build, if needed,
         #       by running with coverage in only one matrix job run.
-        shell: micromamba-shell --shell bash -eo pipefail {0}
+        shell: bash --login -eo pipefail {0}
         run: |
           # Produce the HTML report. Defaults to writing in htmlcov/index.html.
           pytest --cov=aqua --cov-report=html --cov-report=xml --cov-branch -m "aqua or slow or gsv" || echo "Pytest exited with status $?"
