--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -109,6 +109,8 @@ jobs:
         #       by running with coverage in only one matrix job run.
         #shell: bash --login -eo pipefail {0}
         run: |
+          # Check the shell
+          set -o | grep pipefail
           # Produce the HTML report. Defaults to writing in htmlcov/index.html.
           pytest --cov=aqua --cov-report=html --cov-report=xml --cov-branch -m "aqua or slow or gsv" || echo "Pytest exited with status $?"
           
