--- a/config/config-aqua.yaml
+++ b/config/config-aqua.yaml
@@ -7,7 +7,7 @@ reader:
   regrid: '{configdir}/machines/{machine}/regrid.yaml'
   fixer: '{configdir}/fixes'
 
-cdo:
+cdo:  # CDO path is found automatically with which if not specified here
   levante: /home/m/m214003/local/bin/cdo # CDO 2.2.0 by Uwe Schulzweida (HEALPix support)
-  lumi: /users/jvonhar/mambaforge/aqua/bin/cdo
-  mafalda: /home/jost/miniconda3/envs/aqua/bin/cdo
+  # lumi: /users/jvonhar/mambaforge/aqua/bin/cdo
+  # mafalda: /home/jost/miniconda3/envs/aqua/bin/cdo
