--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -47,7 +47,7 @@ jobs:
         #       We removed the noprofile and norc so we have pytest set by Conda in our PATH.
         # NOTE2: login should be kept becuse the action micromamba/setup-micromamba
         #        writes the environment activation script in the .bashrc file.
-        shell: bash --login -eo pipefail {0}
+        shell: bash -l {0}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -82,8 +82,6 @@ jobs:
               - conda-forge
           create-args: >-
             python=${{ matrix.python-version }}
-          init-shell: >-
-            bash
       - name: Download and set up tests
         run: |
           ./download_data_for_tests.sh
@@ -109,12 +107,6 @@ jobs:
         run: |
           # Produce the HTML report. Defaults to writing in htmlcov/index.html.
           pytest --cov=aqua --cov-report=html --cov-report=xml --cov-branch -m "aqua or slow or gsv"
-
-          # If pytest failed, then exit with the same status code.
-          # HACK due to #436 and #452 of AQUA
-          if [[ $? -ne 0 ]]; then
-            exit $?
-          fi
           
           if [[ ${COVERAGE_ENABLED} ]]; then
             # Extract the top header of the pytest HTML report.
