--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -2,9 +2,9 @@ name: AQUA tests
 
 on:
   push:
-    branches: [ main, dev ]
+    branches: [ main ]
   pull_request:
-    branches: [ main, dev ]
+    branches: [ main ]
   workflow_dispatch:
   schedule:
     - cron: "0 3 * * 1" #run every Monday night at 3AM UTC
@@ -14,17 +14,23 @@ permissions:
 
 jobs:
   aqua_test:
+    # NOTE: this option can be uncommented to run the job only when
+    #       a pull request contains a label with the name "Ready to merge".
     #if: contains(github.event.pull_request.labels.*.name, 'Ready to merge')
     env:
       # You can disable coverage by changing this to false. You can
       # also add other Python versions to the matrix, pinning the
       # coverage job to be executed only on certain versions.
-      COVERAGE_ENABLED: ${{ matrix.python-version == '3.10' }}
+      COVERAGE_ENABLED: ${{ matrix.python-version == '3.11' }}
       DEBIAN_FRONTEND: noninteractive
       GRID_DEFINITION_PATH: /tmp
+      # This is needed for the FDB tests.
       FDB5_CONFIG_FILE: /app/config.yaml
     runs-on: ubuntu-latest
+    # This option applies to the individual job of a matrix.
+    continue-on-error: false
     container:
+      # To run FDB tests we need to use a Docker image with FDB installed.
       # https://hub.docker.com/r/kinow/fdb
       image: kinow/fdb:5.11.17-jammy
       options: --user root
@@ -33,7 +39,8 @@ jobs:
       issues: write
       pull-requests: write
     strategy:
-      fail-fast: true
+      # This option applies to all jobs in the matrix.
+      fail-fast: false
       matrix:
         python-version: ["3.11"]
     defaults:
