--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -12,6 +12,19 @@ on:
 permissions:
   contents: read
 
+defaults:
+  run:
+    # NOTE: We must take care with the shell value here. We have steps
+    #       with mutiline YAML strings. 
+    #       These get converted into shell scripts.
+    #       If execute as ``bash -l fail_first_command.sh``
+    #       then it would fail the first command but run the second
+    #       command. The default value in GitHub is ``--noprofile --norc -eo pipefail``.
+    #       https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsshell
+    #       We removed the noprofile and norc so we have pytest set by Conda in our PATH.
+    # NOTE2: login should be kept becuse the action micromamba/setup-micromamba
+    #        writes the environment activation script in the .bashrc file.
+    shell: bash -l -eo pipefail {0}
 jobs:
   aqua_test:
     # NOTE: this option can be uncommented to run the job only when
@@ -40,21 +53,10 @@ jobs:
       pull-requests: write
     strategy:
       # This option applies to all jobs in the matrix.
+      # If true, the entire matrix will stop running when one of the jobs fails.
       fail-fast: false
       matrix:
         python-version: ["3.11"]
-    defaults:
-      run:
-        # NOTE: We must take care with the shell value here. We have steps
-        #       with mutiline YAML strings. These get converted into shell
-        #       scripts. If execute as ``bash -l fail_first_command.sh``
-        #       then it would fail the first command but run the second
-        #       command. The default value in GitHub is ``--noprofile --norc -eo pipefail``.
-        #       https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsshell
-        #       We removed the noprofile and norc so we have pytest set by Conda in our PATH.
-        # NOTE2: login should be kept becuse the action micromamba/setup-micromamba
-        #        writes the environment activation script in the .bashrc file.
-        shell: bash -l {0}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
